--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,8 @@ h4 {
 }
 .btn-secondary {
     color: #fff;
-    background-color: rgb(73, 53, 102);
-    border-color: rgb(73, 53, 102);
+    background-color: #563D7C !important;
+    border-color: #563D7C !important;
     border-radius: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -60,7 +60,7 @@ h4 {
 
 .btn-secondary:hover {
     color: #fff;
-    background-color: rgb(73, 53, 102);
+    background-color: rgb(71, 48, 106) !important;
     border: solid 1px #fff !important;
     border-radius: 20px;
     padding-top: 10px;
@@ -77,5 +77,8 @@ h4 {
     padding-bottom: 10px;
     padding-left: 40px;
     padding-right: 40px;
+}
+.modal-header {
+    background-color: #563D7C !important;
 }
 
